# JeRyu

./: .cross-repo.toml  .gitignore  .gitleaks.toml  AGENTS.md  CHANGELOG.md  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  MISSION.md  README.md  SECURITY.md  agent-index.json  agent-index.md  agent_bridge.md  check.json  deny.toml  errors.txt  install.sh  jankurai_tracker.md  justfile  proof-lanes.toml  refactor_dispatch.py  rust-analyzer.json  scratch.rs  tarpaulin-report.json  test_font  test_font.rs  test_font2  test_font2.rs  test_font3  test_font3.rs  test_rusttype.rs  token-budget.toml  version.json
.agents/workflows/: jankurai-audit.md
.cargo/: config.toml
.config/: nextest.toml
.cursor/rules/: jankurai.mdc
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/instructions/: jankurai-rust.instructions.md  jankurai-web.instructions.md  jankurai.instructions.md
.github/workflows/: jankurai.yml  release.yml  rust.yml
aer-records/: EXAMPLE.yaml  README.md  mega-file-dispatch.yaml  mega-file-release.yaml  mega-file-state.yaml  mega-file-tui-ui.yaml
agent/: audit-policy.toml  boundaries.toml  generated-zones.toml  jankurai-install.toml  owner-map.json  repo-score.json  repo-score.md  score-history.csv  score-history.jsonl  standard-version.toml  test-map.json  tool-adoption.toml
apps/web/: ux-qa.md
contracts/events/: README.md
crates/adapters/epoch/: Cargo.toml
crates/adapters/epoch/src/: lib.rs
crates/arc-bench/: AGENTS.md  Cargo.toml
crates/arc-bench/src/: exceptions.rs  main.rs  model.rs  psd_mechanics.rs  repo_shape.rs  runtime.rs  witness_loop.rs
crates/cargo-aer/: AGENTS.md  Cargo.toml
crates/cargo-aer/src/: lib.rs  main.rs  records.rs  report.rs  scan.rs
crates/cargo-vrc/: AGENTS.md  Cargo.toml
crates/cargo-vrc/src/: lib.rs  main.rs  model.rs  planner.rs  planner_support.rs  workspace.rs
crates/cargo-witness/: AGENTS.md  Cargo.toml
crates/cargo-witness/src/: diagnose.rs  diff.rs  graph.rs  graph_extract.rs  lib.rs  main.rs  model.rs  repair.rs
crates/tui-capture/: Cargo.toml
crates/tui-capture/src/: main.rs  support.rs  support_utils.rs
crates/tuiwright/: Cargo.toml
crates/witness-rt/: AGENTS.md  Cargo.toml
crates/witness-rt/src/: hook.rs  lib.rs  macros.rs  packet.rs
db/: README.md  state.rs
db/constraints/: 0001_inline_constraints.sql
db/migrations/: 0001_inline_schema.sql
docs/: API.md  ARCHITECTURE.md  JERYU_TUI.md  MISSION.md  RTK.md  VGIT_TUI.md  VTI.md  audit-rubric.md  audit-rules.md  boundaries.md  ci-testing.md  generated-zones.md  redline-jansu-issues.md  release.md  testing.md
examples/labs/exception-zoo/cases/semver-break/: Cargo.toml
examples/labs/exception-zoo/cases/semver-break/src/: lib.rs
examples/labs/repo-shape-bench/arcified/: Cargo.toml
examples/labs/repo-shape-bench/arcified/crates/http-api/: Cargo.toml
examples/labs/repo-shape-bench/arcified/crates/http-api/src/: lib.rs
examples/labs/repo-shape-bench/arcified/crates/orders-core/: Cargo.toml
ops/ci/: Dockerfile.sshd-test  install-gc-timer.sh  jeryu-gc.service  jeryu-gc.timer  local_ci.sh  ssh_install_integration.sh  vgit-gc.service  vgit-gc.timer
ops/release/: release-gate.sh  semver-enforce.sh
paper/: api-appendix.tex  architecture-appendix.tex  executive-brief.tex  main.tex  paper.md  references.bib  upgrade-plan-v2.0.1.md
paper/assets/: README.md
python/ai-service/: plot_jankurai_score_history.py
scripts/: capture-tui-screenshots.sh  postgres-state-proof.sh
src/: admission.rs  agent.rs  agent_ops.rs  agent_runtime.rs  agent_surface.rs  agent_surface_index.rs  agent_surface_tests.rs  bootstrap.rs  buildkit.rs  cache.rs  cache_brain.rs  cache_proxy.rs  cache_reports.rs  cache_reports_manager.rs  cache_reports_scan.rs  capability.rs  capability_actions.rs  capability_execute.rs  capability_inspect.rs  capability_request.rs  capability_tests.rs  capsule.rs  cargo_cache.rs  cargo_cache_helpers.rs  cargo_cache_layout.rs  cargo_cache_leases.rs  cargo_cache_tests.rs  cli.rs  cli_defs.rs  cli_defs_aux.rs  cli_runtime_commands.rs  cli_test_commands.rs  cli_tests.rs  config.rs  config_paths.rs  config_support.rs  decision.rs  decision_gate.rs  dispatch.rs  dispatch_back.rs  (+76 more)
src/agent_review/: security.rs
src/api/: actions.rs  agent_session.rs  entity.rs  events.rs  mod.rs  read_model.rs  snapshot.rs
src/autonomy/: daemon.rs  escalation.rs  escalation_loader.rs  http_server.rs  kill_bell.rs  metrics.rs  shadow.rs
src/cache/: mod.rs  runtime.rs  runtime_cas.rs  runtime_control.rs  runtime_gc.rs  runtime_reports.rs  types.rs
src/commands/: agent_submit.rs  exec.rs  git.rs  host.rs  install.rs  job.rs  mirror.rs  mod.rs  pipeline.rs  pool.rs  release.rs  remote.rs  secrets.rs  settings.rs  system.rs  test.rs  test_back.rs  test_back_choose.rs
src/db/: release_repo.rs
src/exec/: cleanup.rs  mod.rs  stage.rs  stage_cache.rs  support.rs
src/gateway/: AGENTS.md  cargo.rs  git.rs  mod.rs  npm.rs  oci.rs  singleflight.rs
src/git/: bridge.rs  classify.rs  event.rs  executor.rs  invocation.rs  mirror.rs  mod.rs  policy.rs  receipt.rs  shim.rs  snapshot.rs  store.rs  system.rs
src/git_host/: test_utils.rs
src/llm/: openai_compatible.rs  scrub.rs
src/mcp/: core.rs  core_io.rs  http.rs  tests.rs  tools.rs  tools_schema.rs
src/release/: canary.rs  foundry.rs  gate.rs  lifecycle.rs  lifecycle_checks.rs  lifecycle_support.rs  progress.rs  release_status_render.rs  status.rs  (+5 more)
tests/: agent_tests.rs  autonomy_e2e.rs  autonomy_e2e_live.rs  cache_integration_test.rs  e2e.rs  epoch_manager.rs  git_event_recording.rs  git_mirror.rs  git_passthrough.rs  job_tests.rs  language_bad_behavior.rs  llm_smoke_openrouter.rs  pool_tests.rs  reclaim_tests.rs  settings_fail_closed.rs  ssh_install_test.rs  tui_recording.rs  tui_tuiwright.rs
tests/fixtures/fixture_project/: Cargo.toml
tests/fixtures/fixture_project/src/: lib.rs  main.rs
tests/fixtures/fixture_project/tests/: integration.rs
tools/: check-dependencies.sh  plot_jankurai_score_history.py  security-lane.sh
(+236 files in other folders)
