[package]
name = "tui-capture"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[dependencies]
anyhow.workspace = true
clap.workspace = true
image = { version = "0.25", default-features = false, features = ["png"] }
portable-pty = "0.9"
rusttype = "0.9"
vt100 = "0.16"
